// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vscode > vscode 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "ignorePatterns": [
      "**/build/*/**/*.js",
      "**/dist/**/*.js",
      "**/extensions/**/*.d.ts",
      "**/extensions/**/build/**",
      "**/extensions/**/colorize-fixtures/**",
      "**/extensions/css-language-features/server/test/pathCompletionFixtures/**",
      "**/extensions/html-language-features/server/lib/jquery.d.ts",
      "**/extensions/html-language-features/server/src/test/pathCompletionFixtures/**",
      "**/extensions/ipynb/notebook-out/**",
      "**/extensions/markdown-language-features/media/**",
      "**/extensions/markdown-language-features/notebook-out/**",
      "**/extensions/markdown-math/notebook-out/**",
      "**/extensions/notebook-renderers/renderer-out/index.js",
      "**/extensions/simple-browser/media/index.js",
      "**/extensions/terminal-suggest/src/completions/upstream/**",
      "**/extensions/terminal-suggest/third_party/**",
      "**/extensions/typescript-language-features/test-workspace/**",
      "**/extensions/typescript-language-features/extension.webpack.config.js",
      "**/extensions/typescript-language-features/extension-browser.webpack.config.js",
      "**/extensions/typescript-language-features/package-manager/node-maintainer/**",
      "**/extensions/vscode-api-tests/testWorkspace/**",
      "**/extensions/vscode-api-tests/testWorkspace2/**",
      "**/fixtures/**",
      "**/node_modules/**",
      "**/out-*/**/*.js",
      "**/out-editor-*/**",
      "**/out/**/*.js",
      "**/src/**/dompurify.js",
      "**/src/**/marked.js",
      "**/src/**/semver.js",
      "**/src/typings/**/*.d.ts",
      "**/src/vs/*/**/*.d.ts",
      "**/src/vs/base/test/common/filters.perf.data.js",
      "**/src/vs/loader.js",
      "**/test/unit/assert.js",
      "**/test/automation/out/**",
      "**/typings/**",
      "!.vscode",
    ],
    "overrides": [
      {
        "files": [
          "**/vscode.d.ts",
        ],
        "plugins": [
          "jsdoc",
        ],
        "rules": {
          "jsdoc/require-returns": "warn",
        },
      },
      {
        "files": [
          "src/*.ts",
          "src/**/{node,electron-main,electron-utility}/**/*.ts",
        ],
        "rules": {
          "no-restricted-globals": [
            "warn",
            "name",
            "length",
            "event",
            "closed",
            "external",
            "status",
            "origin",
            "orientation",
            "context",
            "__dirname",
            "__filename",
            "require",
          ],
        },
      },
      {
        "files": [
          "src/**/{browser,electron-sandbox}/**/*.ts",
        ],
        "rules": {
          "no-restricted-globals": [
            "warn",
            "name",
            "length",
            "event",
            "closed",
            "external",
            "status",
            "origin",
            "orientation",
            "context",
            {
              "message": "Use <targetWindow>.setInterval to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "setInterval",
            },
            {
              "message": "Use <targetWindow>.clearInterval to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "clearInterval",
            },
            {
              "message": "Use <targetWindow>.requestAnimationFrame to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "requestAnimationFrame",
            },
            {
              "message": "Use <targetWindow>.cancelAnimationFrame to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "cancelAnimationFrame",
            },
            {
              "message": "Use <targetWindow>.requestIdleCallback to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "requestIdleCallback",
            },
            {
              "message": "Use <targetWindow>.cancelIdleCallback to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "cancelIdleCallback",
            },
            {
              "message": "Use <targetWindow> to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "window",
            },
            {
              "message": "Use <targetWindow>.addEventListener to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "addEventListener",
            },
            {
              "message": "Use <targetWindow>.removeEventListener to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "removeEventListener",
            },
            {
              "message": "Use <targetWindow>.getComputedStyle to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "getComputedStyle",
            },
            {
              "message": "Use <targetWindow>.focus to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "focus",
            },
            {
              "message": "Use <targetWindow>.blur to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "blur",
            },
            {
              "message": "Use <targetWindow>.close to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "close",
            },
            {
              "message": "Use <targetWindow>.dispatchEvent to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "dispatchEvent",
            },
            {
              "message": "Use <targetWindow>.getSelection to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "getSelection",
            },
            {
              "message": "Use <targetWindow>.matchMedia to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "matchMedia",
            },
            {
              "message": "Use <targetWindow>.open to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "open",
            },
            {
              "message": "Use <targetWindow>.parent to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "parent",
            },
            {
              "message": "Use <targetWindow>.postMessage to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "postMessage",
            },
            {
              "message": "Use <targetWindow>.devicePixelRatio to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "devicePixelRatio",
            },
            {
              "message": "Use <targetWindow>.frames to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "frames",
            },
            {
              "message": "Use <targetWindow>.frameElement to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "frameElement",
            },
            {
              "message": "Use <targetWindow>.innerHeight to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "innerHeight",
            },
            {
              "message": "Use <targetWindow>.innerWidth to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "innerWidth",
            },
            {
              "message": "Use <targetWindow>.outerHeight to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "outerHeight",
            },
            {
              "message": "Use <targetWindow>.outerWidth to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "outerWidth",
            },
            {
              "message": "Use <targetWindow>.opener to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "opener",
            },
            {
              "message": "Use <targetWindow>.origin to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "origin",
            },
            {
              "message": "Use <targetWindow>.screen to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "screen",
            },
            {
              "message": "Use <targetWindow>.screenLeft to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "screenLeft",
            },
            {
              "message": "Use <targetWindow>.screenTop to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "screenTop",
            },
            {
              "message": "Use <targetWindow>.screenX to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "screenX",
            },
            {
              "message": "Use <targetWindow>.screenY to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "screenY",
            },
            {
              "message": "Use <targetWindow>.scrollX to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "scrollX",
            },
            {
              "message": "Use <targetWindow>.scrollY to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "scrollY",
            },
            {
              "message": "Use <targetWindow>.top to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "top",
            },
            {
              "message": "Use <targetWindow>.visualViewport to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "visualViewport",
            },
          ],
        },
      },
      {
        "files": [
          "src/**/electron-utility/**/*.ts",
        ],
        "rules": {
          "no-restricted-imports": [
            "warn",
            {
              "paths": [
                {
                  "allowImportNames": [
                    "net",
                    "system-preferences",
                  ],
                  "message": "Only net and system-preferences are allowed to be imported from electron",
                  "name": "electron",
                },
              ],
            },
          ],
        },
      },
    ],
    "plugins": [],
    "rules": {
      "constructor-super": "warn",
      "curly": "warn",
      "eqeqeq": "warn",
      "no-async-promise-executor": "warn",
      "no-caller": "warn",
      "no-case-declarations": "warn",
      "no-debugger": "warn",
      "no-duplicate-case": "warn",
      "no-duplicate-imports": "warn",
      "no-eval": "warn",
      "no-misleading-character-class": "warn",
      "no-new-wrappers": "warn",
      "no-restricted-globals": [
        "warn",
        "name",
        "length",
        "event",
        "closed",
        "external",
        "status",
        "origin",
        "orientation",
        "context",
      ],
      "no-sparse-arrays": "warn",
      "no-throw-literal": "warn",
      "no-unsafe-finally": "warn",
      "no-unused-labels": "warn",
      "no-var": "warn",
      "prefer-const": [
        "warn",
        {
          "destructuring": "all",
        },
      ],
    },
  },
  "skipped": {
    "js-plugins": [
      "header/header",
      "@stylistic/ts/semi",
      "@stylistic/ts/member-delimiter-style",
    ],
    "not-implemented": [
      "local/code-translation-remind",
      "local/code-no-native-private",
      "local/code-parameter-properties-must-have-explicit-accessibility",
      "local/code-no-nls-in-standalone-editor",
      "local/code-no-potentially-unsafe-disposables",
      "local/code-no-dangerous-type-assertions",
      "local/code-no-standalone-editor",
      "local/code-no-unexternalized-strings",
      "local/code-must-use-super-dispose",
      "local/code-declare-service-brand",
      "local/code-layering",
      "local/code-no-unused-expressions",
      "jsdoc/no-types",
      "local/code-no-static-self-ref",
      "@typescript-eslint/naming-convention",
      "local/code-no-test-only",
      "local/code-no-test-async-suite",
      "local/code-must-use-result",
      "local/code-ensure-no-disposables-leak-in-test",
      "no-restricted-syntax",
      "local/vscode-dts-create-func",
      "local/vscode-dts-literal-or-types",
      "local/vscode-dts-string-type-literals",
      "local/vscode-dts-interface-naming",
      "local/vscode-dts-cancellation",
      "local/vscode-dts-use-export",
      "local/vscode-dts-use-thenable",
      "local/vscode-dts-vscode-in-comments",
      "local/vscode-dts-provider-naming",
      "local/vscode-dts-event-naming",
      "jsdoc/no-multi-asterisks",
      "jsdoc/require-jsdoc",
      "jsdoc/check-param-names",
      "local/code-amd-node-module",
      "local/code-no-global-document-listener",
      "local/code-import-patterns",
      "local/code-no-runtime-import",
      "local/code-limited-top-functions",
    ],
    "nursery": [
      "@typescript-eslint/prefer-optional-chain",
      "@typescript-eslint/prefer-readonly",
    ],
    "type-aware": [],
    "unsupported": [
      "no-buffer-constructor",
      "no-extra-semi",
      "comma-dangle",
    ],
  },
  "warnings": [],
}
`;

exports[`vscode --js-plugins > vscode--js-plugins 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "ignorePatterns": [
      "**/build/*/**/*.js",
      "**/dist/**/*.js",
      "**/extensions/**/*.d.ts",
      "**/extensions/**/build/**",
      "**/extensions/**/colorize-fixtures/**",
      "**/extensions/css-language-features/server/test/pathCompletionFixtures/**",
      "**/extensions/html-language-features/server/lib/jquery.d.ts",
      "**/extensions/html-language-features/server/src/test/pathCompletionFixtures/**",
      "**/extensions/ipynb/notebook-out/**",
      "**/extensions/markdown-language-features/media/**",
      "**/extensions/markdown-language-features/notebook-out/**",
      "**/extensions/markdown-math/notebook-out/**",
      "**/extensions/notebook-renderers/renderer-out/index.js",
      "**/extensions/simple-browser/media/index.js",
      "**/extensions/terminal-suggest/src/completions/upstream/**",
      "**/extensions/terminal-suggest/third_party/**",
      "**/extensions/typescript-language-features/test-workspace/**",
      "**/extensions/typescript-language-features/extension.webpack.config.js",
      "**/extensions/typescript-language-features/extension-browser.webpack.config.js",
      "**/extensions/typescript-language-features/package-manager/node-maintainer/**",
      "**/extensions/vscode-api-tests/testWorkspace/**",
      "**/extensions/vscode-api-tests/testWorkspace2/**",
      "**/fixtures/**",
      "**/node_modules/**",
      "**/out-*/**/*.js",
      "**/out-editor-*/**",
      "**/out/**/*.js",
      "**/src/**/dompurify.js",
      "**/src/**/marked.js",
      "**/src/**/semver.js",
      "**/src/typings/**/*.d.ts",
      "**/src/vs/*/**/*.d.ts",
      "**/src/vs/base/test/common/filters.perf.data.js",
      "**/src/vs/loader.js",
      "**/test/unit/assert.js",
      "**/test/automation/out/**",
      "**/typings/**",
      "!.vscode",
    ],
    "jsPlugins": [
      {
        "name": "eslint-js",
        "specifier": "@oxlint/plugin-eslint",
      },
      "eslint-plugin-header",
    ],
    "overrides": [
      {
        "files": [
          "**/*.ts",
        ],
        "jsPlugins": [
          "@stylistic/eslint-plugin-ts",
        ],
        "rules": {
          "@stylistic/ts/member-delimiter-style": "warn",
          "@stylistic/ts/semi": "warn",
        },
      },
      {
        "files": [
          "**/vscode.d.ts",
          "**/vscode.proposed.*.d.ts",
        ],
        "jsPlugins": [
          {
            "name": "eslint-js",
            "specifier": "@oxlint/plugin-eslint",
          },
        ],
        "rules": {
          "eslint-js/no-restricted-syntax": [
            "warn",
            {
              "message": "Use Array<...> for arrays of union types.",
              "selector": "TSArrayType > TSUnionType",
            },
          ],
        },
      },
      {
        "files": [
          "**/vscode.d.ts",
        ],
        "plugins": [
          "jsdoc",
        ],
        "rules": {
          "jsdoc/require-returns": "warn",
        },
      },
      {
        "files": [
          "src/*.ts",
          "src/**/{node,electron-main,electron-utility}/**/*.ts",
        ],
        "rules": {
          "no-restricted-globals": [
            "warn",
            "name",
            "length",
            "event",
            "closed",
            "external",
            "status",
            "origin",
            "orientation",
            "context",
            "__dirname",
            "__filename",
            "require",
          ],
        },
      },
      {
        "files": [
          "src/**/{browser,electron-sandbox}/**/*.ts",
        ],
        "jsPlugins": [
          {
            "name": "eslint-js",
            "specifier": "@oxlint/plugin-eslint",
          },
        ],
        "rules": {
          "eslint-js/no-restricted-syntax": [
            "warn",
            {
              "message": "Use DOM.isMouseEvent() to support multi-window scenarios.",
              "selector": "BinaryExpression[operator='instanceof'][right.name='MouseEvent']",
            },
            {
              "message": "Use DOM.isHTMLElement() and related methods to support multi-window scenarios.",
              "selector": "BinaryExpression[operator='instanceof'][right.name=/^HTML\\w+/]",
            },
            {
              "message": "Use DOM.isSVGElement() and related methods to support multi-window scenarios.",
              "selector": "BinaryExpression[operator='instanceof'][right.name=/^SVG\\w+/]",
            },
            {
              "message": "Use DOM.isKeyboardEvent() to support multi-window scenarios.",
              "selector": "BinaryExpression[operator='instanceof'][right.name='KeyboardEvent']",
            },
            {
              "message": "Use DOM.isPointerEvent() to support multi-window scenarios.",
              "selector": "BinaryExpression[operator='instanceof'][right.name='PointerEvent']",
            },
            {
              "message": "Use DOM.isDragEvent() to support multi-window scenarios.",
              "selector": "BinaryExpression[operator='instanceof'][right.name='DragEvent']",
            },
            {
              "message": "Use <targetWindow>.document.activeElement to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "selector": "MemberExpression[object.name='document'][property.name='activeElement']",
            },
            {
              "message": "Use <targetWindow>.document.contains to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "selector": "MemberExpression[object.name='document'][property.name='contains']",
            },
            {
              "message": "Use <targetWindow>.document.styleSheets to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "selector": "MemberExpression[object.name='document'][property.name='styleSheets']",
            },
            {
              "message": "Use <targetWindow>.document.fullscreenElement to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "selector": "MemberExpression[object.name='document'][property.name='fullscreenElement']",
            },
            {
              "message": "Use <targetWindow>.document.body to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "selector": "MemberExpression[object.name='document'][property.name='body']",
            },
            {
              "message": "Use <targetWindow>.document.addEventListener to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "selector": "MemberExpression[object.name='document'][property.name='addEventListener']",
            },
            {
              "message": "Use <targetWindow>.document.removeEventListener to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "selector": "MemberExpression[object.name='document'][property.name='removeEventListener']",
            },
            {
              "message": "Use <targetWindow>.document.hasFocus to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "selector": "MemberExpression[object.name='document'][property.name='hasFocus']",
            },
            {
              "message": "Use <targetWindow>.document.head to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "selector": "MemberExpression[object.name='document'][property.name='head']",
            },
            {
              "message": "Use <targetWindow>.document.exitFullscreen to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "selector": "MemberExpression[object.name='document'][property.name='exitFullscreen']",
            },
            {
              "message": "Use <targetWindow>.document.getElementById to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "selector": "MemberExpression[object.name='document'][property.name='getElementById']",
            },
            {
              "message": "Use <targetWindow>.document.getElementsByClassName to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "selector": "MemberExpression[object.name='document'][property.name='getElementsByClassName']",
            },
            {
              "message": "Use <targetWindow>.document.getElementsByName to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "selector": "MemberExpression[object.name='document'][property.name='getElementsByName']",
            },
            {
              "message": "Use <targetWindow>.document.getElementsByTagName to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "selector": "MemberExpression[object.name='document'][property.name='getElementsByTagName']",
            },
            {
              "message": "Use <targetWindow>.document.getElementsByTagNameNS to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "selector": "MemberExpression[object.name='document'][property.name='getElementsByTagNameNS']",
            },
            {
              "message": "Use <targetWindow>.document.getSelection to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "selector": "MemberExpression[object.name='document'][property.name='getSelection']",
            },
            {
              "message": "Use <targetWindow>.document.open to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "selector": "MemberExpression[object.name='document'][property.name='open']",
            },
            {
              "message": "Use <targetWindow>.document.close to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "selector": "MemberExpression[object.name='document'][property.name='close']",
            },
            {
              "message": "Use <targetWindow>.document.documentElement to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "selector": "MemberExpression[object.name='document'][property.name='documentElement']",
            },
            {
              "message": "Use <targetWindow>.document.visibilityState to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "selector": "MemberExpression[object.name='document'][property.name='visibilityState']",
            },
            {
              "message": "Use <targetWindow>.document.querySelector to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "selector": "MemberExpression[object.name='document'][property.name='querySelector']",
            },
            {
              "message": "Use <targetWindow>.document.querySelectorAll to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "selector": "MemberExpression[object.name='document'][property.name='querySelectorAll']",
            },
            {
              "message": "Use <targetWindow>.document.elementFromPoint to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "selector": "MemberExpression[object.name='document'][property.name='elementFromPoint']",
            },
            {
              "message": "Use <targetWindow>.document.elementsFromPoint to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "selector": "MemberExpression[object.name='document'][property.name='elementsFromPoint']",
            },
            {
              "message": "Use <targetWindow>.document.onkeydown to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "selector": "MemberExpression[object.name='document'][property.name='onkeydown']",
            },
            {
              "message": "Use <targetWindow>.document.onkeyup to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "selector": "MemberExpression[object.name='document'][property.name='onkeyup']",
            },
            {
              "message": "Use <targetWindow>.document.onmousedown to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "selector": "MemberExpression[object.name='document'][property.name='onmousedown']",
            },
            {
              "message": "Use <targetWindow>.document.onmouseup to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "selector": "MemberExpression[object.name='document'][property.name='onmouseup']",
            },
            {
              "message": "Use <targetWindow>.document.execCommand to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "selector": "MemberExpression[object.name='document'][property.name='execCommand']",
            },
          ],
          "no-restricted-globals": [
            "warn",
            "name",
            "length",
            "event",
            "closed",
            "external",
            "status",
            "origin",
            "orientation",
            "context",
            {
              "message": "Use <targetWindow>.setInterval to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "setInterval",
            },
            {
              "message": "Use <targetWindow>.clearInterval to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "clearInterval",
            },
            {
              "message": "Use <targetWindow>.requestAnimationFrame to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "requestAnimationFrame",
            },
            {
              "message": "Use <targetWindow>.cancelAnimationFrame to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "cancelAnimationFrame",
            },
            {
              "message": "Use <targetWindow>.requestIdleCallback to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "requestIdleCallback",
            },
            {
              "message": "Use <targetWindow>.cancelIdleCallback to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "cancelIdleCallback",
            },
            {
              "message": "Use <targetWindow> to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "window",
            },
            {
              "message": "Use <targetWindow>.addEventListener to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "addEventListener",
            },
            {
              "message": "Use <targetWindow>.removeEventListener to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "removeEventListener",
            },
            {
              "message": "Use <targetWindow>.getComputedStyle to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "getComputedStyle",
            },
            {
              "message": "Use <targetWindow>.focus to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "focus",
            },
            {
              "message": "Use <targetWindow>.blur to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "blur",
            },
            {
              "message": "Use <targetWindow>.close to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "close",
            },
            {
              "message": "Use <targetWindow>.dispatchEvent to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "dispatchEvent",
            },
            {
              "message": "Use <targetWindow>.getSelection to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "getSelection",
            },
            {
              "message": "Use <targetWindow>.matchMedia to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "matchMedia",
            },
            {
              "message": "Use <targetWindow>.open to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "open",
            },
            {
              "message": "Use <targetWindow>.parent to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "parent",
            },
            {
              "message": "Use <targetWindow>.postMessage to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "postMessage",
            },
            {
              "message": "Use <targetWindow>.devicePixelRatio to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "devicePixelRatio",
            },
            {
              "message": "Use <targetWindow>.frames to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "frames",
            },
            {
              "message": "Use <targetWindow>.frameElement to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "frameElement",
            },
            {
              "message": "Use <targetWindow>.innerHeight to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "innerHeight",
            },
            {
              "message": "Use <targetWindow>.innerWidth to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "innerWidth",
            },
            {
              "message": "Use <targetWindow>.outerHeight to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "outerHeight",
            },
            {
              "message": "Use <targetWindow>.outerWidth to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "outerWidth",
            },
            {
              "message": "Use <targetWindow>.opener to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "opener",
            },
            {
              "message": "Use <targetWindow>.origin to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "origin",
            },
            {
              "message": "Use <targetWindow>.screen to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "screen",
            },
            {
              "message": "Use <targetWindow>.screenLeft to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "screenLeft",
            },
            {
              "message": "Use <targetWindow>.screenTop to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "screenTop",
            },
            {
              "message": "Use <targetWindow>.screenX to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "screenX",
            },
            {
              "message": "Use <targetWindow>.screenY to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "screenY",
            },
            {
              "message": "Use <targetWindow>.scrollX to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "scrollX",
            },
            {
              "message": "Use <targetWindow>.scrollY to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "scrollY",
            },
            {
              "message": "Use <targetWindow>.top to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "top",
            },
            {
              "message": "Use <targetWindow>.visualViewport to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "visualViewport",
            },
          ],
        },
      },
      {
        "files": [
          "src/**/electron-utility/**/*.ts",
        ],
        "rules": {
          "no-restricted-imports": [
            "warn",
            {
              "paths": [
                {
                  "allowImportNames": [
                    "net",
                    "system-preferences",
                  ],
                  "message": "Only net and system-preferences are allowed to be imported from electron",
                  "name": "electron",
                },
              ],
            },
          ],
        },
      },
      {
        "files": [
          "src/vs/workbench/contrib/terminal/**/*.ts",
          "src/vs/workbench/contrib/terminalContrib/**/*.ts",
        ],
        "jsPlugins": [
          {
            "name": "eslint-js",
            "specifier": "@oxlint/plugin-eslint",
          },
        ],
        "rules": {
          "eslint-js/comma-dangle": [
            "warn",
            "only-multiline",
          ],
        },
      },
    ],
    "plugins": [],
    "rules": {
      "constructor-super": "warn",
      "curly": "warn",
      "eqeqeq": "warn",
      "eslint-js/no-buffer-constructor": "warn",
      "eslint-js/no-extra-semi": "warn",
      "header/header": [
        "error",
        "block",
        [
          "---------------------------------------------------------------------------------------------",
          " *  Copyright (c) Microsoft Corporation. All rights reserved.",
          " *  Licensed under the MIT License. See License.txt in the project root for license information.",
          " *--------------------------------------------------------------------------------------------",
        ],
      ],
      "no-async-promise-executor": "warn",
      "no-caller": "warn",
      "no-case-declarations": "warn",
      "no-debugger": "warn",
      "no-duplicate-case": "warn",
      "no-duplicate-imports": "warn",
      "no-eval": "warn",
      "no-misleading-character-class": "warn",
      "no-new-wrappers": "warn",
      "no-restricted-globals": [
        "warn",
        "name",
        "length",
        "event",
        "closed",
        "external",
        "status",
        "origin",
        "orientation",
        "context",
      ],
      "no-sparse-arrays": "warn",
      "no-throw-literal": "warn",
      "no-unsafe-finally": "warn",
      "no-unused-labels": "warn",
      "no-var": "warn",
      "prefer-const": [
        "warn",
        {
          "destructuring": "all",
        },
      ],
    },
  },
  "skipped": {
    "js-plugins": [],
    "not-implemented": [
      "local/code-translation-remind",
      "local/code-no-native-private",
      "local/code-parameter-properties-must-have-explicit-accessibility",
      "local/code-no-nls-in-standalone-editor",
      "local/code-no-potentially-unsafe-disposables",
      "local/code-no-dangerous-type-assertions",
      "local/code-no-standalone-editor",
      "local/code-no-unexternalized-strings",
      "local/code-must-use-super-dispose",
      "local/code-declare-service-brand",
      "local/code-layering",
      "local/code-no-unused-expressions",
      "jsdoc/no-types",
      "local/code-no-static-self-ref",
      "@typescript-eslint/naming-convention",
      "local/code-no-test-only",
      "local/code-no-test-async-suite",
      "local/code-must-use-result",
      "local/code-ensure-no-disposables-leak-in-test",
      "local/vscode-dts-create-func",
      "local/vscode-dts-literal-or-types",
      "local/vscode-dts-string-type-literals",
      "local/vscode-dts-interface-naming",
      "local/vscode-dts-cancellation",
      "local/vscode-dts-use-export",
      "local/vscode-dts-use-thenable",
      "local/vscode-dts-vscode-in-comments",
      "local/vscode-dts-provider-naming",
      "local/vscode-dts-event-naming",
      "jsdoc/no-multi-asterisks",
      "jsdoc/require-jsdoc",
      "jsdoc/check-param-names",
      "local/code-amd-node-module",
      "local/code-no-global-document-listener",
      "local/code-import-patterns",
      "local/code-no-runtime-import",
      "local/code-limited-top-functions",
    ],
    "nursery": [
      "@typescript-eslint/prefer-optional-chain",
      "@typescript-eslint/prefer-readonly",
    ],
    "type-aware": [],
    "unsupported": [],
  },
  "warnings": [],
}
`;

exports[`vscode --type-aware > vscode--type-aware 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "ignorePatterns": [
      "**/build/*/**/*.js",
      "**/dist/**/*.js",
      "**/extensions/**/*.d.ts",
      "**/extensions/**/build/**",
      "**/extensions/**/colorize-fixtures/**",
      "**/extensions/css-language-features/server/test/pathCompletionFixtures/**",
      "**/extensions/html-language-features/server/lib/jquery.d.ts",
      "**/extensions/html-language-features/server/src/test/pathCompletionFixtures/**",
      "**/extensions/ipynb/notebook-out/**",
      "**/extensions/markdown-language-features/media/**",
      "**/extensions/markdown-language-features/notebook-out/**",
      "**/extensions/markdown-math/notebook-out/**",
      "**/extensions/notebook-renderers/renderer-out/index.js",
      "**/extensions/simple-browser/media/index.js",
      "**/extensions/terminal-suggest/src/completions/upstream/**",
      "**/extensions/terminal-suggest/third_party/**",
      "**/extensions/typescript-language-features/test-workspace/**",
      "**/extensions/typescript-language-features/extension.webpack.config.js",
      "**/extensions/typescript-language-features/extension-browser.webpack.config.js",
      "**/extensions/typescript-language-features/package-manager/node-maintainer/**",
      "**/extensions/vscode-api-tests/testWorkspace/**",
      "**/extensions/vscode-api-tests/testWorkspace2/**",
      "**/fixtures/**",
      "**/node_modules/**",
      "**/out-*/**/*.js",
      "**/out-editor-*/**",
      "**/out/**/*.js",
      "**/src/**/dompurify.js",
      "**/src/**/marked.js",
      "**/src/**/semver.js",
      "**/src/typings/**/*.d.ts",
      "**/src/vs/*/**/*.d.ts",
      "**/src/vs/base/test/common/filters.perf.data.js",
      "**/src/vs/loader.js",
      "**/test/unit/assert.js",
      "**/test/automation/out/**",
      "**/typings/**",
      "!.vscode",
    ],
    "overrides": [
      {
        "files": [
          "**/vscode.d.ts",
        ],
        "plugins": [
          "jsdoc",
        ],
        "rules": {
          "jsdoc/require-returns": "warn",
        },
      },
      {
        "files": [
          "src/*.ts",
          "src/**/{node,electron-main,electron-utility}/**/*.ts",
        ],
        "rules": {
          "no-restricted-globals": [
            "warn",
            "name",
            "length",
            "event",
            "closed",
            "external",
            "status",
            "origin",
            "orientation",
            "context",
            "__dirname",
            "__filename",
            "require",
          ],
        },
      },
      {
        "files": [
          "src/**/{browser,electron-sandbox}/**/*.ts",
        ],
        "rules": {
          "no-restricted-globals": [
            "warn",
            "name",
            "length",
            "event",
            "closed",
            "external",
            "status",
            "origin",
            "orientation",
            "context",
            {
              "message": "Use <targetWindow>.setInterval to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "setInterval",
            },
            {
              "message": "Use <targetWindow>.clearInterval to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "clearInterval",
            },
            {
              "message": "Use <targetWindow>.requestAnimationFrame to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "requestAnimationFrame",
            },
            {
              "message": "Use <targetWindow>.cancelAnimationFrame to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "cancelAnimationFrame",
            },
            {
              "message": "Use <targetWindow>.requestIdleCallback to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "requestIdleCallback",
            },
            {
              "message": "Use <targetWindow>.cancelIdleCallback to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "cancelIdleCallback",
            },
            {
              "message": "Use <targetWindow> to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "window",
            },
            {
              "message": "Use <targetWindow>.addEventListener to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "addEventListener",
            },
            {
              "message": "Use <targetWindow>.removeEventListener to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "removeEventListener",
            },
            {
              "message": "Use <targetWindow>.getComputedStyle to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "getComputedStyle",
            },
            {
              "message": "Use <targetWindow>.focus to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "focus",
            },
            {
              "message": "Use <targetWindow>.blur to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "blur",
            },
            {
              "message": "Use <targetWindow>.close to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "close",
            },
            {
              "message": "Use <targetWindow>.dispatchEvent to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "dispatchEvent",
            },
            {
              "message": "Use <targetWindow>.getSelection to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "getSelection",
            },
            {
              "message": "Use <targetWindow>.matchMedia to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "matchMedia",
            },
            {
              "message": "Use <targetWindow>.open to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "open",
            },
            {
              "message": "Use <targetWindow>.parent to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "parent",
            },
            {
              "message": "Use <targetWindow>.postMessage to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "postMessage",
            },
            {
              "message": "Use <targetWindow>.devicePixelRatio to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "devicePixelRatio",
            },
            {
              "message": "Use <targetWindow>.frames to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "frames",
            },
            {
              "message": "Use <targetWindow>.frameElement to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "frameElement",
            },
            {
              "message": "Use <targetWindow>.innerHeight to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "innerHeight",
            },
            {
              "message": "Use <targetWindow>.innerWidth to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "innerWidth",
            },
            {
              "message": "Use <targetWindow>.outerHeight to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "outerHeight",
            },
            {
              "message": "Use <targetWindow>.outerWidth to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "outerWidth",
            },
            {
              "message": "Use <targetWindow>.opener to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "opener",
            },
            {
              "message": "Use <targetWindow>.origin to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "origin",
            },
            {
              "message": "Use <targetWindow>.screen to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "screen",
            },
            {
              "message": "Use <targetWindow>.screenLeft to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "screenLeft",
            },
            {
              "message": "Use <targetWindow>.screenTop to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "screenTop",
            },
            {
              "message": "Use <targetWindow>.screenX to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "screenX",
            },
            {
              "message": "Use <targetWindow>.screenY to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "screenY",
            },
            {
              "message": "Use <targetWindow>.scrollX to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "scrollX",
            },
            {
              "message": "Use <targetWindow>.scrollY to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "scrollY",
            },
            {
              "message": "Use <targetWindow>.top to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "top",
            },
            {
              "message": "Use <targetWindow>.visualViewport to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "visualViewport",
            },
          ],
        },
      },
      {
        "files": [
          "src/**/electron-utility/**/*.ts",
        ],
        "rules": {
          "no-restricted-imports": [
            "warn",
            {
              "paths": [
                {
                  "allowImportNames": [
                    "net",
                    "system-preferences",
                  ],
                  "message": "Only net and system-preferences are allowed to be imported from electron",
                  "name": "electron",
                },
              ],
            },
          ],
        },
      },
    ],
    "plugins": [],
    "rules": {
      "constructor-super": "warn",
      "curly": "warn",
      "eqeqeq": "warn",
      "no-async-promise-executor": "warn",
      "no-caller": "warn",
      "no-case-declarations": "warn",
      "no-debugger": "warn",
      "no-duplicate-case": "warn",
      "no-duplicate-imports": "warn",
      "no-eval": "warn",
      "no-misleading-character-class": "warn",
      "no-new-wrappers": "warn",
      "no-restricted-globals": [
        "warn",
        "name",
        "length",
        "event",
        "closed",
        "external",
        "status",
        "origin",
        "orientation",
        "context",
      ],
      "no-sparse-arrays": "warn",
      "no-throw-literal": "warn",
      "no-unsafe-finally": "warn",
      "no-unused-labels": "warn",
      "no-var": "warn",
      "prefer-const": [
        "warn",
        {
          "destructuring": "all",
        },
      ],
    },
  },
  "skipped": {
    "js-plugins": [
      "header/header",
      "@stylistic/ts/semi",
      "@stylistic/ts/member-delimiter-style",
    ],
    "not-implemented": [
      "local/code-translation-remind",
      "local/code-no-native-private",
      "local/code-parameter-properties-must-have-explicit-accessibility",
      "local/code-no-nls-in-standalone-editor",
      "local/code-no-potentially-unsafe-disposables",
      "local/code-no-dangerous-type-assertions",
      "local/code-no-standalone-editor",
      "local/code-no-unexternalized-strings",
      "local/code-must-use-super-dispose",
      "local/code-declare-service-brand",
      "local/code-layering",
      "local/code-no-unused-expressions",
      "jsdoc/no-types",
      "local/code-no-static-self-ref",
      "@typescript-eslint/naming-convention",
      "local/code-no-test-only",
      "local/code-no-test-async-suite",
      "local/code-must-use-result",
      "local/code-ensure-no-disposables-leak-in-test",
      "no-restricted-syntax",
      "local/vscode-dts-create-func",
      "local/vscode-dts-literal-or-types",
      "local/vscode-dts-string-type-literals",
      "local/vscode-dts-interface-naming",
      "local/vscode-dts-cancellation",
      "local/vscode-dts-use-export",
      "local/vscode-dts-use-thenable",
      "local/vscode-dts-vscode-in-comments",
      "local/vscode-dts-provider-naming",
      "local/vscode-dts-event-naming",
      "jsdoc/no-multi-asterisks",
      "jsdoc/require-jsdoc",
      "jsdoc/check-param-names",
      "local/code-amd-node-module",
      "local/code-no-global-document-listener",
      "local/code-import-patterns",
      "local/code-no-runtime-import",
      "local/code-limited-top-functions",
    ],
    "nursery": [
      "@typescript-eslint/prefer-optional-chain",
      "@typescript-eslint/prefer-readonly",
    ],
    "type-aware": [],
    "unsupported": [
      "no-buffer-constructor",
      "no-extra-semi",
      "comma-dangle",
    ],
  },
  "warnings": [],
}
`;

exports[`vscode merge > vscode--merge 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "error",
      "perf": "error",
    },
    "env": {
      "builtin": true,
    },
    "ignorePatterns": [
      "**/build/*/**/*.js",
      "**/dist/**/*.js",
      "**/extensions/**/*.d.ts",
      "**/extensions/**/build/**",
      "**/extensions/**/colorize-fixtures/**",
      "**/extensions/css-language-features/server/test/pathCompletionFixtures/**",
      "**/extensions/html-language-features/server/lib/jquery.d.ts",
      "**/extensions/html-language-features/server/src/test/pathCompletionFixtures/**",
      "**/extensions/ipynb/notebook-out/**",
      "**/extensions/markdown-language-features/media/**",
      "**/extensions/markdown-language-features/notebook-out/**",
      "**/extensions/markdown-math/notebook-out/**",
      "**/extensions/notebook-renderers/renderer-out/index.js",
      "**/extensions/simple-browser/media/index.js",
      "**/extensions/terminal-suggest/src/completions/upstream/**",
      "**/extensions/terminal-suggest/third_party/**",
      "**/extensions/typescript-language-features/test-workspace/**",
      "**/extensions/typescript-language-features/extension.webpack.config.js",
      "**/extensions/typescript-language-features/extension-browser.webpack.config.js",
      "**/extensions/typescript-language-features/package-manager/node-maintainer/**",
      "**/extensions/vscode-api-tests/testWorkspace/**",
      "**/extensions/vscode-api-tests/testWorkspace2/**",
      "**/fixtures/**",
      "**/node_modules/**",
      "**/out-*/**/*.js",
      "**/out-editor-*/**",
      "**/out/**/*.js",
      "**/src/**/dompurify.js",
      "**/src/**/marked.js",
      "**/src/**/semver.js",
      "**/src/typings/**/*.d.ts",
      "**/src/vs/*/**/*.d.ts",
      "**/src/vs/base/test/common/filters.perf.data.js",
      "**/src/vs/loader.js",
      "**/test/unit/assert.js",
      "**/test/automation/out/**",
      "**/typings/**",
      "!.vscode",
    ],
    "overrides": [
      {
        "files": [
          "**/vscode.d.ts",
        ],
        "plugins": [
          "jsdoc",
        ],
        "rules": {
          "jsdoc/require-returns": "warn",
        },
      },
      {
        "files": [
          "src/*.ts",
          "src/**/{node,electron-main,electron-utility}/**/*.ts",
        ],
        "rules": {
          "no-restricted-globals": [
            "warn",
            "name",
            "length",
            "event",
            "closed",
            "external",
            "status",
            "origin",
            "orientation",
            "context",
            "__dirname",
            "__filename",
            "require",
          ],
        },
      },
      {
        "files": [
          "src/**/{browser,electron-sandbox}/**/*.ts",
        ],
        "rules": {
          "no-restricted-globals": [
            "warn",
            "name",
            "length",
            "event",
            "closed",
            "external",
            "status",
            "origin",
            "orientation",
            "context",
            {
              "message": "Use <targetWindow>.setInterval to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "setInterval",
            },
            {
              "message": "Use <targetWindow>.clearInterval to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "clearInterval",
            },
            {
              "message": "Use <targetWindow>.requestAnimationFrame to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "requestAnimationFrame",
            },
            {
              "message": "Use <targetWindow>.cancelAnimationFrame to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "cancelAnimationFrame",
            },
            {
              "message": "Use <targetWindow>.requestIdleCallback to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "requestIdleCallback",
            },
            {
              "message": "Use <targetWindow>.cancelIdleCallback to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "cancelIdleCallback",
            },
            {
              "message": "Use <targetWindow> to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "window",
            },
            {
              "message": "Use <targetWindow>.addEventListener to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "addEventListener",
            },
            {
              "message": "Use <targetWindow>.removeEventListener to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "removeEventListener",
            },
            {
              "message": "Use <targetWindow>.getComputedStyle to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "getComputedStyle",
            },
            {
              "message": "Use <targetWindow>.focus to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "focus",
            },
            {
              "message": "Use <targetWindow>.blur to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "blur",
            },
            {
              "message": "Use <targetWindow>.close to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "close",
            },
            {
              "message": "Use <targetWindow>.dispatchEvent to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "dispatchEvent",
            },
            {
              "message": "Use <targetWindow>.getSelection to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "getSelection",
            },
            {
              "message": "Use <targetWindow>.matchMedia to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "matchMedia",
            },
            {
              "message": "Use <targetWindow>.open to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "open",
            },
            {
              "message": "Use <targetWindow>.parent to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "parent",
            },
            {
              "message": "Use <targetWindow>.postMessage to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "postMessage",
            },
            {
              "message": "Use <targetWindow>.devicePixelRatio to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "devicePixelRatio",
            },
            {
              "message": "Use <targetWindow>.frames to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "frames",
            },
            {
              "message": "Use <targetWindow>.frameElement to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "frameElement",
            },
            {
              "message": "Use <targetWindow>.innerHeight to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "innerHeight",
            },
            {
              "message": "Use <targetWindow>.innerWidth to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "innerWidth",
            },
            {
              "message": "Use <targetWindow>.outerHeight to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "outerHeight",
            },
            {
              "message": "Use <targetWindow>.outerWidth to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "outerWidth",
            },
            {
              "message": "Use <targetWindow>.opener to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "opener",
            },
            {
              "message": "Use <targetWindow>.origin to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "origin",
            },
            {
              "message": "Use <targetWindow>.screen to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "screen",
            },
            {
              "message": "Use <targetWindow>.screenLeft to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "screenLeft",
            },
            {
              "message": "Use <targetWindow>.screenTop to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "screenTop",
            },
            {
              "message": "Use <targetWindow>.screenX to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "screenX",
            },
            {
              "message": "Use <targetWindow>.screenY to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "screenY",
            },
            {
              "message": "Use <targetWindow>.scrollX to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "scrollX",
            },
            {
              "message": "Use <targetWindow>.scrollY to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "scrollY",
            },
            {
              "message": "Use <targetWindow>.top to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "top",
            },
            {
              "message": "Use <targetWindow>.visualViewport to support multi-window scenarios. Resolve targetWindow with DOM.getWindow(element) or DOM.getActiveWindow() or use the predefined mainWindow constant.",
              "name": "visualViewport",
            },
          ],
        },
      },
      {
        "files": [
          "src/**/electron-utility/**/*.ts",
        ],
        "rules": {
          "no-restricted-imports": [
            "warn",
            {
              "paths": [
                {
                  "allowImportNames": [
                    "net",
                    "system-preferences",
                  ],
                  "message": "Only net and system-preferences are allowed to be imported from electron",
                  "name": "electron",
                },
              ],
            },
          ],
        },
      },
    ],
    "plugins": [],
    "rules": {
      "constructor-super": "warn",
      "curly": "warn",
      "eqeqeq": "warn",
      "no-async-promise-executor": "warn",
      "no-caller": "warn",
      "no-case-declarations": "warn",
      "no-debugger": "warn",
      "no-duplicate-case": "warn",
      "no-duplicate-imports": "warn",
      "no-eval": "warn",
      "no-misleading-character-class": "warn",
      "no-new-wrappers": "warn",
      "no-restricted-globals": [
        "warn",
        "name",
        "length",
        "event",
        "closed",
        "external",
        "status",
        "origin",
        "orientation",
        "context",
      ],
      "no-sparse-arrays": "warn",
      "no-throw-literal": "warn",
      "no-unsafe-finally": "warn",
      "no-unused-labels": "warn",
      "no-var": "warn",
      "prefer-const": [
        "warn",
        {
          "destructuring": "all",
        },
      ],
    },
  },
  "skipped": {
    "js-plugins": [
      "header/header",
      "@stylistic/ts/semi",
      "@stylistic/ts/member-delimiter-style",
    ],
    "not-implemented": [
      "local/code-translation-remind",
      "local/code-no-native-private",
      "local/code-parameter-properties-must-have-explicit-accessibility",
      "local/code-no-nls-in-standalone-editor",
      "local/code-no-potentially-unsafe-disposables",
      "local/code-no-dangerous-type-assertions",
      "local/code-no-standalone-editor",
      "local/code-no-unexternalized-strings",
      "local/code-must-use-super-dispose",
      "local/code-declare-service-brand",
      "local/code-layering",
      "local/code-no-unused-expressions",
      "jsdoc/no-types",
      "local/code-no-static-self-ref",
      "@typescript-eslint/naming-convention",
      "local/code-no-test-only",
      "local/code-no-test-async-suite",
      "local/code-must-use-result",
      "local/code-ensure-no-disposables-leak-in-test",
      "no-restricted-syntax",
      "local/vscode-dts-create-func",
      "local/vscode-dts-literal-or-types",
      "local/vscode-dts-string-type-literals",
      "local/vscode-dts-interface-naming",
      "local/vscode-dts-cancellation",
      "local/vscode-dts-use-export",
      "local/vscode-dts-use-thenable",
      "local/vscode-dts-vscode-in-comments",
      "local/vscode-dts-provider-naming",
      "local/vscode-dts-event-naming",
      "jsdoc/no-multi-asterisks",
      "jsdoc/require-jsdoc",
      "jsdoc/check-param-names",
      "local/code-amd-node-module",
      "local/code-no-global-document-listener",
      "local/code-import-patterns",
      "local/code-no-runtime-import",
      "local/code-limited-top-functions",
    ],
    "nursery": [
      "@typescript-eslint/prefer-optional-chain",
      "@typescript-eslint/prefer-readonly",
    ],
    "type-aware": [],
    "unsupported": [
      "no-buffer-constructor",
      "no-extra-semi",
      "comma-dangle",
    ],
  },
  "warnings": [],
}
`;
